--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,6 @@ spring.thymeleaf.cache=false
 spring.servlet.multipart.max-file-size=2000MB
 spring.servlet.multipart.max-request-size=2000MB
 
-xyz.yuanjin.nas.listen-drivers=F:\\ E:\\
+#xyz.yuanjin.nas.listen-drivers=F:\\ E:\\
+xyz.yuanjin.nas.listen-drivers=C:\\
 xyz.yuanjin.nas.protect-file-regular.regexp=^F:\\\\+\\d{3}_.*$  .*README\\\\.md$
