--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,5 @@ spring.servlet.multipart.max-file-size=2000MB
 spring.servlet.multipart.max-request-size=2000MB
 
 #xyz.yuanjin.nas.listen-drivers=F:\\ E:\\
-xyz.yuanjin.nas.listen-drivers=C:\\
-xyz.yuanjin.nas.protect-file-regular.regexp=^F:\\\\+\\d{3}_.*$  .*README\\\\.md$
+xyz.yuanjin.nas.listen-drivers=C:\\ D:\\
+xyz.yuanjin.nas.protect-file-regular.regexp=^D:\\\\+\\d{3}_.*$  .*README\\\\.md$
