--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,11 @@
     </dependencies>
 
     <build>
+        <!--<resources>
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
+        </resources>-->
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
