--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,10 @@ spring.thymeleaf.cache=false
 spring.servlet.multipart.max-file-size=2000MB
 spring.servlet.multipart.max-request-size=2000MB
 
+spring.devtools.restart.enabled=true
+spring.devtools.restart.additional-paths=src/main/java
+spring.devtools.restart.exclude=WEB-INF/**
+
 #xyz.yuanjin.nas.listen-drivers=F:\\ E:\\
 #xyz.yuanjin.nas.listen-drivers=C:\\ D:\\
 #xyz.yuanjin.nas.protect-file-regular.regexp=^D:\\\\+\\d{3}_.*$  .*README\\\\.md$
